fix: option pk 연관관계 설정 오류 수정